@@ -7,7 +7,6 @@ Open bugs/issues:
 For the coming release:
 
 - Drop or update zeolite archive
-- Configuration files
 - More intuitive option names?
 
 =====================================================
