@@ -1,5 +1,7 @@
 Systre 1.1.8:
 
+2013-03-05: Archive files under ~/.systre are read at startup
+2013-03-05: Systre can save its current configuration as a startup default
 2013-03-05: TD10 value is rounded to the nearest integer.
 2013-02-26: RCSR archive is current as of today.
 2012-09-11: The Wells point symbols for vertices are displayed on request.
